test/negative/format_bad_fmt.mut
# format() first arg is not a string — should fail
s := format(42, "hello")
print(s)
